--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -14,13 +14,13 @@
 
 @keyframes animate {
         0%, 100% {
-                background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://k6u8v6y8.stackpathcdn.com/blog/wp-content/uploads/2019/02/March-Holidays.jpg');
+                background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('http://cdn.home-designing.com/wp-content/uploads/2015/09/clamp-lamp.jpg');
         }
         40% {
-                background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://www.mia-online.org/wp-content/uploads/2019/12/images3359-5df990568df23-1024x789.jpg');
+                background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://m.media-amazon.com/images/S/aplus-media/sc/22f53f2b-84b6-4afc-b3b1-f63e1850b2a1.__CR0,0,970,600_PT0_SX970_V1___.jfif');
         }
         75% {
-                background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://img.traveltriangle.com/blog/wp-content/uploads/2017/12/cover-for-50-Amazing-Travel-Experiences-Around-The-World.jpg');
+                background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://ae01.alicdn.com/kf/HTB1Y3u5bojrK1RkHFNRq6ySvpXaL/Girl-table-lamp-with-Lampshade-Kids-room-Study-room-Bedroom-unique-bedside-lamp-Crystal-Lamp-Body.jpg');
         }
 }
 
