--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -1,4 +1,4 @@
 .img {
-        border: 8px solid rgb(245, 87, 29);
+        border: 8px solid #FF1493;
         box-shadow: 25px 50px 60px lightgray;
 }
